Fixed Sliders on Small Res

--- a/css/custom.css
+++ b/css/custom.css
@@ -2147,6 +2147,27 @@ select.goog-te-combo {
 
 
 
+.carousel {
+  margin-bottom: 60px;
+}
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  min-width: 100%;
+  background-color: #fff;
+}
+
+.carousel-inner > .item > img {
+  min-width: 100%;
+  height: 100%;
+}
+
+
 /* *************************
     Media Queries
 ************************* */
